--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,4 +31,11 @@
 
 en:
   hello: "Hello world"
-
+  rubyonrailstutorrial: "Ruby on Rails Tutorial"
+  isa : "is a"
+  book : "book"
+  and : "and"
+  screencastseries : "screencast series"
+  toteachwebdevelopmentwith : "to teach web development with"
+  rubyonrails : "Ruby on Rails"
+  applicationforthetutorial : "This is the sample application for the tutorial."
