--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,14 +63,24 @@ en:
       text-1 : "Contact the Ruby on Rails Tutorial about the sample app at the"
       text-2 : "contact page"
     signup:
-      title: "Log in"
+      title: "Signup"
   users:
     new:
       title: "Sign up"
       text-1: "This will be a signup page for new users."
+      text-3: "Create my account"
+      text-4: "Password Confirmation"
+      text-5: "Name"
+      text-6: "Email"
+      text-7: "Password"
+  shared:
+    error_messages:
+      contains: "The form contains"
   base_title: "Ruby on rails"
   text-3: "Ruby on Rails Tutorrial"
   text-1: "Michael Hartl"
   text-2: "News"
   text-4: "The"
   text-5: "by"
+  welcome_to_app: "Welcome to the Sample App!"
+
