--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,21 @@ en:
       text-5: "Name"
       text-6: "Email"
       text-7: "Password"
+    edit:
+      title: "Edit user"
+      text-1: "Update your profile"
+      text-2: "Name"
+      text-3: "Email"
+      text-4: "Password"
+      text-5: "Password Confirmation"
+      text-6: "Save changes"
+    form:
+      text-1: "Name"
+      text-2: "Email"
+      text-3: "Password"
+      text-4: "Password Confirmation"
+    index:
+      title: "All Users"
   shared:
     error_messages:
       contains: "The form contains"
@@ -90,6 +105,7 @@ en:
       text-2: "Password"
       text-3: "Sign up now!"
       text-4: "New user?"
+      text-5: "Remember me on this computer"
   base_title: "Ruby on rails"
   text-3: "Ruby on Rails Tutorrial"
   text-1: "Michael Hartl"
@@ -99,4 +115,5 @@ en:
   welcome_to_app: "Welcome to the Sample App!"
   invalid: "Invalid email/password combination"
   nouser: "Not find request user"
-
+  profileup: "Profile updated"
+  pleaselog: "Please log in."
