--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,8 +114,9 @@ en:
       text-4: "New user?"
       text-5: "Remember me on this computer"
       account_not_actived: "Account not activated."
-      check_email: "Check your email for the activation link."
+      check_email: "Please check your email to activate your account."
       forgot_password: "(forgot password)"
+      error_messages: "Invalid email/password combination"
   base_title: "Ruby on rails"
   text-3: "Ruby on Rails Tutorrial"
   text-1: "Michael Hartl"
@@ -128,3 +129,7 @@ en:
   profileup: "Profile updated"
   pleaselog: "Please log in."
   userdeleted: "User deleted"
+  accountac: "Account activated!"
+  account_invalid: "Invalid activation link"
+  acctivation: "Account activation"
+  resetpassword: "Reset Password"
